<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="title">My Nanodegree Apps!</string>
    <string name="app_1_btn_txt">SPOTIFY STREAMER</string>
    <string name="app_2_btn_txt">SCORES APP</string>
    <string name="app_3_btn_txt">LIBRARY APP</string>
    <string name="app_4_btn_txt">BUILD IT BIGGER</string>
    <string name="app_5_btn_txt">XYZ READER</string>
    <string name="app_6_btn_txt">CAPSTONE: MY OWN APP</string>
    <string name="app_1_btn_tag">Spotify Streamer App</string>
    <string name="app_2_btn_tag">Scores App</string>
    <string name="app_3_btn_tag">Library App</string>
    <string name="app_4_btn_tag">Build it Bigger App</string>
    <string name="app_5_btn_tag">XYZ Reader App</string>
    <string name="app_6_btn_tag">Capstone App</string>
    <string name="action_settings">Settings</string>
</resources>
